force-app/main/default/objects/Historico_Analiticas__c/Historico_Analiticas__c.object-meta.xml
<CustomObject>
    <label>Historico Analiticas</label>
    <nameField>
        <displayFormat>A-{YY}/{MM}-{0000}</displayFormat>
        <label>Nombre de Analítica</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historico Analiticas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>