force-app/main/default/objects/Historico_Analiticas__c/fields/DiferenciaAcumulada__c.field-meta.xml
<CustomField>
    <fullName>DiferenciaAcumulada__c</fullName>
    <formula>if(DATEVALUE(CreatedDate )= TODAY(), Importe__c ,0)-ImporteInicial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DiferenciaAcumulada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>