force-app/main/default/objects/Historico_Analiticas__c/fields/DiferenciaAcumuladaForecast__c.field-meta.xml
<CustomField>
    <fullName>DiferenciaAcumuladaForecast__c</fullName>
    <formula>if(DATEVALUE(CreatedDate )= TODAY(),  Importe_Forecast__c ,0)-ImporteInicial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DiferenciaAcumuladaForecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>