force-app/main/default/objects/Historico_Analiticas__c/fields/Elemento_PEP__c.field-meta.xml
<CustomField>
    <fullName>Elemento_PEP__c</fullName>
    <label>Elemento_PEP</label>
    <length>40</length>
    <type>Text</type>
</CustomField>