force-app/main/default/objects/Historico_Analiticas__c/fields/Fecha_7__c.field-meta.xml
<CustomField>
    <fullName>Fecha_7__c</fullName>
    <formula>CreatedDate -7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha -7</label>
    <type>Date</type>
</CustomField>