force-app/main/default/objects/Historico_Analiticas__c/fields/Fecha_Cierre_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cierre_Oppty__c</fullName>
    <formula>&apos;joo&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Cierre Oppty</label>
    <type>Text</type>
</CustomField>