force-app/main/default/objects/Historico_Analiticas__c/fields/Importe_Calculado_trigger__c.field-meta.xml
<CustomField>
    <fullName>Importe_Calculado_trigger__c</fullName>
    <label>Importe_Calculado_trigger</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>