force-app/main/default/objects/Historico_Analiticas__c/fields/Importe_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Importe_Forecast__c</fullName>
    <label>Importe Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>