force-app/main/default/objects/Historico_Analiticas__c/fields/ImporteAntiguo__c.field-meta.xml
<CustomField>
    <fullName>ImporteAntiguo__c</fullName>
    <formula>if(   ISPICKVAL(Tipo__c, &apos;2020-04-01&apos;), Importe__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ImporteAntiguo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>