force-app/main/default/objects/Historico_Analiticas__c/fields/ImporteAyer__c.field-meta.xml
<CustomField>
    <fullName>ImporteAyer__c</fullName>
    <formula>if(DATEVALUE(CreatedDate )= (TODAY()-2) , Importe_LP__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ImporteAyer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>