force-app/main/default/objects/Historico_Analiticas__c/fields/ImporteHoy__c.field-meta.xml
<CustomField>
    <fullName>ImporteHoy__c</fullName>
    <formula>if(DATEVALUE(CreatedDate )=  TODAY() , Importe_LP__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ImporteHoy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>