force-app/main/default/objects/Historico_Analiticas__c/fields/ImporteInicial__c.field-meta.xml
<CustomField>
    <fullName>ImporteInicial__c</fullName>
    <formula>if(  ISPICKVAL(Tipo__c, &apos;2020-03-26&apos;),  Importe__c  ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ImporteInicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>