force-app/main/default/objects/Historico_Analiticas__c/fields/Ingresos_Reales__c.field-meta.xml
<CustomField>
    <fullName>Ingresos_Reales__c</fullName>
    <label>Ingresos Reales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>