force-app/main/default/objects/Historico_Analiticas__c/fields/Linea_de_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_Proyecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Línea de Proyecto</label>
    <referenceTo>Linea_de_Proyecto__c</referenceTo>
    <relationshipLabel>Analíticas</relationshipLabel>
    <relationshipName>Analiticas1585131419</relationshipName>
    <type>Lookup</type>
</CustomField>