force-app/main/default/objects/Historico_Analiticas__c/fields/Mercado__c.field-meta.xml
<CustomField>
    <fullName>Mercado__c</fullName>
    <label>Mercado</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sectores</valueSetName>
    </valueSet>
</CustomField>