force-app/main/default/objects/Historico_Analiticas__c/fields/Oficina_Tecnica__c.field-meta.xml
<CustomField>
    <fullName>Oficina_Tecnica__c</fullName>
    <label>Oficina Tecnica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Oficina_t_cnica</valueSetName>
    </valueSet>
</CustomField>