force-app/main/default/objects/Historico_Analiticas__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Analíticas</relationshipLabel>
    <relationshipName>Analiticas1585131419</relationshipName>
    <type>Lookup</type>
</CustomField>