force-app/main/default/objects/Historico_Analiticas__c/fields/OPP_cerrada__c.field-meta.xml
<CustomField>
    <fullName>OPP_cerrada__c</fullName>
    <formula>IF( 
OR(RecordType.Name==&apos;ForecastDeLinea&apos;,ISPICKVAL(Tipo__c,&apos;ForecastDeOportunidades&apos;)), 
IF(NOT(ISBLANK(Oportunidad__c)),Oportunidad__r.IsClosed, 
IF(NOT(ISBLANK(Linea_de_Proyecto__c)),Linea_de_Proyecto__r.Oportunidad__r.IsClosed,FALSE)), 
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPP cerrada</label>
    <type>Checkbox</type>
</CustomField>