force-app/main/default/objects/Historico_Analiticas__c/fields/Principal__c.field-meta.xml
<CustomField>
    <fullName>Principal__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Principal</label>
    <type>Checkbox</type>
</CustomField>