force-app/main/default/objects/Historico_Analiticas__c/fields/Propietarios_Multibooking__c.field-meta.xml
<CustomField>
    <fullName>Propietarios_Multibooking__c</fullName>
    <label>Propietarios_Multibooking</label>
    <type>TextArea</type>
</CustomField>