force-app/main/default/objects/Historico_Analiticas__c/fields/Sectores__c.field-meta.xml
<CustomField>
    <fullName>Sectores__c</fullName>
    <label>Sectores</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A.Pub-Admin. Pública</fullName>
                <color>#FFFFFF</color>
                <label>A.Pub-Admin. Pública</label>
            </value>
            <value>
                <fullName>Banca-Banca</fullName>
                <color>#FFFFFF</color>
                <label>Banca-Banca</label>
            </value>
            <value>
                <fullName>Energía</fullName>
                <color>#FFFFFF</color>
                <label>Energía</label>
            </value>
            <value>
                <fullName>Environment</fullName>
                <color>#FFFFFF</color>
                <label>Environment</label>
            </value>
            <value>
                <fullName>Estruct.-Estructura</fullName>
                <color>#FFFFFF</color>
                <label>Estruct.-Estructura</label>
            </value>
            <value>
                <fullName>Industria-Industria</fullName>
                <color>#FFFFFF</color>
                <label>Industria-Industria</label>
            </value>
            <value>
                <fullName>Seguros-Seguros</fullName>
                <color>#FFFFFF</color>
                <label>Seguros-Seguros</label>
            </value>
            <value>
                <fullName>Telco-Media</fullName>
                <color>#FFFFFF</color>
                <label>Telco-Media</label>
            </value>
            <value>
                <fullName>Telco-Telco</fullName>
                <color>#FFFFFF</color>
                <label>Telco-Telco</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>