force-app/main/default/objects/Historico_Analiticas__c/fields/Sede_Origen__c.field-meta.xml
<CustomField>
    <fullName>Sede_Origen__c</fullName>
    <label>Sede_Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sede_Origen</valueSetName>
    </valueSet>
</CustomField>