force-app/main/default/objects/Historico_Analiticas__c/fields/Sede_Venta_Numancia__c.field-meta.xml
<CustomField>
    <fullName>Sede_Venta_Numancia__c</fullName>
    <formula>iF( Sede_Venta__r.Name==&apos;VASS Madrid&apos;, &apos;VASS Madrid España&apos;,
IF( Sede_Venta__r.Name==&apos;VASS Barcelona&apos;,&apos;VASS Barcelona España&apos;,
IF( Sede_Venta__r.Name==&apos;VASS Galicia&apos;,&apos;VASS Galicia España&apos;,
IF( Sede_Venta__r.Name==&apos;VASS CONSULTORÍA DE SISTEMAS PERÚ SAC&apos;,&apos;VASS Perú Latam&apos;,
IF(Sede_Venta__r.Name==&apos;VASS CONSULTORIA DE SISTEMAS CHILE LIMITADA&apos;,&apos;VASS Chile Latam&apos;,
IF(or(Sede_Venta__r.Name==&apos;VASS CONSULTORIA DE SISTEMAS COLOMBIA SAS&apos;,Sede_Venta__r.Name==&apos;VASS CONSULTORÍA DE SISTEMAS SL SUCURSAL COLOMBIA&apos;),&apos;VASS Colombia Latam&apos;,
IF(Sede_Venta__r.Name==&apos;VASS CONSULTORÍA DE SISTEMAS MEXICO SA DE CV&apos;,&apos;VASS México Latam&apos;,
IF(Sede_Venta__r.Name==&apos;NATEEVO DIGITAL SLU&apos;,&apos;Nateevo &apos;,
IF(Sede_Venta__r.Name==&apos;SERBATIC SISTEMAS TECNOLÓGICOS, S.A&apos;,&apos;Serbatic &apos;,
IF(Sede_Venta__r.Name==&apos;VASS NEDERLAND B.V&apos;,&apos;S VASS BENELUX EMEA&apos;,
IF(Sede_Venta__r.Name==&apos;VASS IT Services Ltd&apos;,&apos;VASS UK EMEA&apos;,&apos;null&apos;)))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sede Venta Numancia</label>
    <type>Text</type>
</CustomField>