force-app/main/default/objects/Historico_Analiticas__c/fields/Semana__c.field-meta.xml
<CustomField>
    <fullName>Semana__c</fullName>
    <formula>&apos;Del--- &apos; + TEXT(DAY(Fecha_7__c))+ TEXT(MONTH( Fecha_7__c ))+&quot;/&quot; +&quot;/&quot; +TEXT(YEAR(Fecha_7__c))  + &apos;al&apos;  +TEXT((CreatedDate -1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semana</label>
    <type>Text</type>
</CustomField>