force-app/main/default/objects/Historico_Analiticas__c/fields/Semana_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Semana_Anterior__c</fullName>
    <formula>Fecha__c -7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semana Anterior</label>
    <type>Date</type>
</CustomField>