force-app/main/default/objects/Historico_Analiticas__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Backlog</fullName>
                <color>#FFFFFF</color>
                <label>Backlog</label>
            </value>
            <value>
                <fullName>Cierre</fullName>
                <color>#FFFFFF</color>
                <label>Cierre</label>
            </value>
            <value>
                <fullName>ForecastDeLinea</fullName>
                <color>#FFFFFF</color>
                <label>ForecastDeLinea</label>
            </value>
            <value>
                <fullName>ForecastDeOportunidades</fullName>
                <color>#FFFFFF</color>
                <label>ForecastDeOportunidades</label>
            </value>
            <value>
                <fullName>Presupuesto</fullName>
                <color>#FFFFFF</color>
                <label>Presupuesto</label>
            </value>
            <value>
                <fullName>ForecastImporteTotal_Presupuesto</fullName>
                <color>#FFFFFF</color>
                <label>ForecastImporteTotal_Presupuesto</label>
            </value>
            <value>
                <fullName>ForecastImporteXprob_Presupuesto</fullName>
                <color>#FFFFFF</color>
                <label>ForecastImporteXprob_Presupuesto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>