force-app/main/default/objects/Historico_Analiticas__c/fields/Tipo_de_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Proyecto__c</fullName>
    <label>Tipo de Proyecto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Llave en Mano</fullName>
                <color>#FFFFFF</color>
                <label>Llave en Mano</label>
            </value>
            <value>
                <fullName>Licencias</fullName>
                <color>#FFFFFF</color>
                <label>Licencias</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <color>#FFFFFF</color>
                <label>AM</label>
            </value>
            <value>
                <fullName>T&amp;M</fullName>
                <color>#FFFFFF</color>
                <label>T&amp;M</label>
            </value>
            <value>
                <fullName>Venta de licencias</fullName>
                <color>#FFFFFF</color>
                <label>Venta de licencias</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>