force-app/main/default/objects/Historico_Analiticas__c/fields/Tipo_Filtro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Filtro__c</fullName>
    <formula>TEXT(Tipo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comparar con dia</label>
    <type>Text</type>
</CustomField>