force-app/main/default/objects/Historico_Analiticas__c/recordTypes/Cierre.recordType-meta.xml
<RecordType>
    <fullName>Cierre</fullName>
    <active>true</active>
    <label>Cierre</label>
</RecordType>