force-app/main/default/objects/Historico_Analiticas__c/recordTypes/ForecastDeLinea.recordType-meta.xml
<RecordType>
    <fullName>ForecastDeLinea</fullName>
    <active>true</active>
    <description>OPPS&gt;70%</description>
    <label>ForecastDeLinea</label>
</RecordType>