force-app/main/default/objects/Historico_Analiticas__c/recordTypes/ForecastImporteTotal_Presupuesto.recordType-meta.xml
<RecordType>
    <fullName>ForecastImporteTotal_Presupuesto</fullName>
    <active>true</active>
    <label>BacklogTemporal</label>
</RecordType>