force-app/main/default/objects/Historico_Analiticas__c/recordTypes/ForecastImporteXprob_Presupuesto.recordType-meta.xml
<RecordType>
    <fullName>ForecastImporteXprob_Presupuesto</fullName>
    <active>true</active>
    <label>ForecastImporteXprob_Presupuesto</label>
</RecordType>