force-app/main/default/objects/Historico_Analiticas__c/recordTypes/Presupuesto.recordType-meta.xml
<RecordType>
    <fullName>Presupuesto</fullName>
    <active>true</active>
    <label>Presupuesto</label>
</RecordType>